--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
     
-      - name: Execute Gradle build
-        run: ./gradlew build
+      - name: Execute Gradle test
+        run: ./gradlew test
