Add test-report action
* Add test-report action so that we can see the summary of
  JUnit test resuls of CI build
* Archive HTML report just in case we need to check the
  details of JUnit report

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,17 @@ jobs:
     
       - name: Execute Gradle test
         run: ./gradlew test
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v2
+        if: success() || failure()
+        with:
+          name: test-results
+          path: build/test-results/**/*.xml
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v2
+        if: success() || failure()
+        with:
+          name: test-report
+          path: build/reports/
