--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,14 @@ jobs:
           java-version: ${{ matrix.java }}
           architecture: x64
       - uses: actions/checkout@v3
-    
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
     
       - name: Execute Gradle test
-        run: ./gradlew test
+        run: ./gradlew test check
 
       - name: Upload test results
         uses: actions/upload-artifact@v3
@@ -37,3 +39,10 @@ jobs:
         with:
           name: test-report
           path: build/reports/
+
+      - name: Upload checkstyle report
+        uses: actions/upload-artifact@v3
+        if: success() || failure()
+        with:
+          name: checkstyle-report
+          path: build/checkstyle/*.html
