--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,12 @@ plugins {
 	id 'java-gradle-plugin'
 }
 
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(8)
+	}
+}
+
 apply plugin: 'maven-publish'
 apply plugin: 'checkstyle'
 
@@ -47,7 +53,7 @@ checkstyle {
 	configProperties = ['checkstyleConfigDir': "$checkstyleConfigDir"]
 	ignoreFailures = true
 	reportsDir = project.file('build/checkstyle')
-	toolVersion = '9.3'
+	toolVersion = '10.12.1'
 }
 
 tasks.named('test') {
