--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,15 +6,15 @@ jobs:
   test:
     name: test (JDK ${{ matrix.java }})
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '17' ]
     steps:
-      - name: actions/setup-java@v3 (JDK ${{ matrix.java }})
+      - name: actions/setup-java@v3
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: ${{ matrix.java }}
+          java-version: |
+            11
+            17
+            8
           architecture: x64
       - uses: actions/checkout@v3
         with:
@@ -22,7 +22,7 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-    
+
       - name: Execute Gradle build
         run: ./gradlew build --stacktrace
 
