Let check depends on multiple version test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
     branches: [ "master" ]
 jobs:
   test:
-    name: test (JDK ${{ matrix.java }})
+    name: test
     runs-on: ubuntu-latest
     steps:
       - name: actions/setup-java@v3
