--- a/build.gradle
+++ b/build.gradle
@@ -18,38 +18,57 @@
  */
 
 plugins {
-	id 'com.gradle.plugin-publish' version '0.14.0'
-	id 'java-gradle-plugin'
+    id 'checkstyle'
+    id 'java-gradle-plugin'
 }
 
-apply plugin: 'maven-publish'
-apply plugin: 'checkstyle'
-
-group = 'org.jruyi.gradle'
-archivesBaseName = 'thrift-gradle-plugin'
-version = '0.4.2'
-description = 'A gradle plugin for compiling Thrift IDL files using thrift compiler'
-
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	testImplementation "org.assertj:assertj-core:3.24.2"
-	testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
-	testImplementation "org.mockito:mockito-junit-jupiter:5.4.0"
-	testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    testImplementation "org.assertj:assertj-core:3.24.2"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
+    testImplementation "org.mockito:mockito-junit-jupiter:5.4.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
 }
 
 def checkstyleConfigDir = rootProject.file('settings/checkstyle/')
 checkstyle {
-	configFile = new File(checkstyleConfigDir, 'checkstyle.xml')
-	configProperties = ['checkstyleConfigDir': "$checkstyleConfigDir"]
-	ignoreFailures = true
-	reportsDir = project.file('build/checkstyle')
-	toolVersion = '9.3'
+    configFile = new File(checkstyleConfigDir, 'checkstyle.xml')
+    configProperties = ['checkstyleConfigDir': "$checkstyleConfigDir"]
+    reportsDir = project.file('build/checkstyle')
+    toolVersion = '10.12.1'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+tasks.withType(Checkstyle).configureEach {
+    javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+// Test on multiple LTS versions to check if any API is removed in newer JDK.
+def javaVersions = [11, 17]
+javaVersions.each { version ->
+    def testOnSpecificVersion = tasks.register("testsOn$version", Test) {
+        testClassesDirs = testing.suites.test.sources.output.classesDirs
+        classpath = testing.suites.test.sources.runtimeClasspath
+
+        javaLauncher = javaToolchains.launcherFor {
+            languageVersion = JavaLanguageVersion.of(version)
+        }
+    }
+    tasks.named('check').configure {
+        dependsOn(testOnSpecificVersion)
+    }
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
 }
