--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Gradle Plugin Publish
 on:
-  release:
-    types:
-      - published
+  push:
+    tags:
+      - '[0-9]*.[0-9]*.[0-9]*'
 
 jobs:
   publish:
