--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Publish plugin to gradle plugins portal
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -19,8 +19,15 @@ jobs:
             8
             17
           architecture: x64
+
+      - name: Show version number
+        id: version
+        run: |
+          echo "Version=${{ github.event.release.tag_name }}"
+
       - name: Publish plugins with gradle
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
+          PLUGIN_VERSION: ${{ github.event.release.tag_name }}
         run: ./gradlew publishPlugins -Pgradle.publish.key=$GRADLE_PUBLISH_KEY -Pgradle.publish.secret=$GRADLE_PUBLISH_SECRET
