--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,24 @@ tasks.withType(Test).configureEach {
     useJUnitPlatform()
 }
 
+def setupPluginUpload = tasks.register("setupPluginUpload") {
+    doLast {
+        def key = System.getenv("GRADLE_PUBLISH_KEY")
+        def secret = System.getenv("GRADLE_PUBLISH_SECRET")
+
+        if (key == null || secret == null) {
+            throw new RuntimeException("PublishKey or PublishSecret are not defined from environment variables")
+        }
+
+        System.setProperty("gradle.publish.key", key)
+        System.setProperty("gradle.publish.secret", secret)
+    }
+}
+
+tasks.named("publishPlugins").configure {
+    dependsOn setupPluginUpload
+}
+
 gradlePlugin {
     website = 'https://github.com/line/thrift-gradle-plugin'
     vcsUrl = 'https://github.com/line/thrift-gradle-plugin'
