--- a/examples/test4/build.gradle
+++ b/examples/test4/build.gradle
@@ -1,5 +1,7 @@
+import com.linecorp.thrift.plugin.CompileThrift
+
 /*
- * Based on jruyi/thrift-gradle-plugin/../examples/test2/build.gradle
+ * Based on jruyi/thrift-gradle-plugin/../examples/test1/build.gradle
  * Modified 2023 LINE Corporation
  *
  * Copyright 2023 LINE Corporation
@@ -31,8 +33,10 @@ dependencies {
     implementation 'org.apache.thrift:libthrift:0.14.1'
 }
 
-compileThrift {
-    thriftExecutable "../../lib/thrift/0.17.0/thrift.${osdetector.classifier}"
-    autoDetectPlugin false
-    generator 'py'
+tasks.register("customCompileThrift", CompileThrift.class) {
+    thriftExecutable = "../../lib/thrift/0.17.0/thrift.${osdetector.classifier}"
+    sourceItems.from(layout.projectDirectory.dir("src/main/thrift"))
+    outputDir.set(layout.buildDirectory.dir("gen-gen-src"))
+    generators.put('java', 'private-members')
 }
+
