--- a/examples/test3/build.gradle
+++ b/examples/test3/build.gradle
@@ -32,3 +32,7 @@ compileThrift {
     generator 'perl'
     generator 'js'
 }
+
+tasks.register("clean") {
+    delete project.layout.buildDirectory
+}
