Utilize extension and lazy property API (#23)
* Migrate to extension and lazy provider API

* Add test for property api

* Add more tests

* Add `public void outputDir(String outputDir)` to support passing String like past

* Giving default value to all tasks

* Fix output directory not set and make generators can control the task dependency

* Add example for other generator value

* Using recommend way to detect plugin

* Make plugin can detect java correctly

* Update .gitignore

* using method reference

* Complete the tutorial

* style

* Add more test

* Update README to reflect the new changes

* address the comments

* Add comment and refine

--- a/examples/define-task-manually/build.gradle
+++ b/examples/define-task-manually/build.gradle
@@ -1,5 +1,7 @@
+import com.linecorp.thrift.plugin.CompileThrift
+
 /*
- * Based on jruyi/thrift-gradle-plugin/../examples/test2/build.gradle
+ * Based on jruyi/thrift-gradle-plugin/../examples/test1/build.gradle
  * Modified 2023 LINE Corporation
  *
  * Copyright 2023 LINE Corporation
@@ -32,5 +34,27 @@ dependencies {
 }
 
 compileThrift {
-    thriftExecutable "../../lib/thrift/0.17.0/thrift.${osdetector.classifier}"
+    // Disable default compileThriftTask
+    autoDetectPlugin false
+}
+
+tasks.register("customCompileThrift", CompileThrift) {
+    thriftExecutable = "../../lib/thrift/0.17.0/thrift.${osdetector.classifier}"
+    sourceItems.from(layout.projectDirectory.dir("src/main/thrift"))
+    // Using custom build folder
+    outputDir.set(layout.buildDirectory.dir("gen-gen-src"))
+    generators.put('java', 'private-members')
+}
+
+// We need to set task dependency and sourceSets manually for custom task.
+tasks.named("compileJava") {
+    dependsOn("customCompileThrift")
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir layout.buildDirectory.dir("gen-gen-src")
+        }
+    }
 }
