--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@
 
 plugins {
     id 'checkstyle'
-    id 'com.gradle.plugin-publish' version '1.2.0'
+    id 'com.gradle.plugin-publish' version '1.3.1'
     id 'java-gradle-plugin'
 }
 
@@ -31,10 +31,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation "org.assertj:assertj-core:3.24.2"
-    testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
-    testImplementation "org.mockito:mockito-junit-jupiter:5.4.0"
-    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    testImplementation "org.assertj:assertj-core:3.27.3"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.12.2"
+    testImplementation "org.mockito:mockito-junit-jupiter:5.18.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.4.0"
+
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
 }
 
 java {
@@ -48,7 +50,7 @@ checkstyle {
     configFile = new File(checkstyleConfigDir, 'checkstyle.xml')
     configProperties = ['checkstyleConfigDir': "$checkstyleConfigDir"]
     reportsDir = project.file('build/checkstyle')
-    toolVersion = '10.12.1'
+    toolVersion = '10.26.1'
 }
 
 tasks.withType(Checkstyle).configureEach {
